--- a/learn.html
+++ b/learn.html
@@ -610,6 +610,7 @@
 
     <div class="jump-bar">
         <button class="jump-btn" onclick="window.location.href='prompt-examples.html'">Prompt Examples</button>
+        <button class="jump-btn" onclick="window.location.href='context-engineering.html'">Context Engineering</button>
         <button class="jump-btn" onclick="window.location.href='beyond-prompts.html'">Beyond Prompts</button>
         <button class="jump-btn" onclick="document.getElementById('videos').scrollIntoView({behavior:'smooth'})">Videos</button>
         <button class="jump-btn" onclick="document.getElementById('resources').scrollIntoView({behavior:'smooth'})">Resources</button>
@@ -627,6 +628,22 @@
             <div class="feature-link-text">
                 <h3>View All Prompt Examples</h3>
                 <p>6 examples with time savings, structured prompts, and output mockups</p>
+            </div>
+            <span class="feature-link-arrow">→</span>
+        </a>
+    </div>
+
+    <div class="learn-section" id="context">
+        <div class="section-header">
+            <div class="section-tag">February 2026</div>
+            <h2>Context Engineering</h2>
+            <p>Prompting has split into four disciplines. Most people are practising one. This is the full stack for 2026.</p>
+        </div>
+
+        <a href="context-engineering.html" class="feature-link">
+            <div class="feature-link-text">
+                <h3>The Four Disciplines of Prompting</h3>
+                <p>From prompt craft to specification engineering, what changed this month and why it matters for your team</p>
             </div>
             <span class="feature-link-arrow">→</span>
         </a>
